--- a/styles/style.css
+++ b/styles/style.css
@@ -1205,6 +1205,17 @@ button:hover {
   .wrapper {
     width: 90%;
   }
+  .social {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    position: static;
+    padding-top: 80px;
+  }
   .content {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
